--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-I've suspended this blog for some reasons. <br /> And, There, if you need to contact me feel free to post emails to the im@bennie.im
+I've suspended this blog for some reasons. <br /> And, There, Feel free to post emails to the <b>im@bennie.im</b> as need.
