--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-I've suspended this blog for some reasons. <br /> And, There, Feel free to post emails to the <a href="mailto:im@bennie.im" target="_blank">im@bennie.im</a> as need.
+I've suspended this blog for some reasons. <br /> And, There, Feel free to post emails to the <a href="mailto:im@bennie.im" target="_blank">im@bennie.im</a> if need.
